objects/SBQQ__Quote__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>CPQ_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as a part of story to make contracts for Line Items of Quote.</description>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CreditAmountTotal__c</fullName>
        <description>Fields to store the total amount of credit</description>
        <label>Credit Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CreditExposure__c</fullName>
        <label>Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CropType__c</fullName>
        <description>Crop type is used in mass update section for quote lines in quote line editor</description>
        <label>Crop Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_CropType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomCreatedDate__c</fullName>
        <description>This field is to use when a custom created date is required.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerAcceptanceMethod__c</fullName>
        <description>This fied is used to capture the medium the quote has been accepted</description>
        <inlineHelpText>Medium through which customer communicated</inlineHelpText>
        <label>Customer Acceptance Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted by DH Customer</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Text/Whatsapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerOfferedPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Offered Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomerSegment__c</fullName>
        <description>This field is created as a part of story to handle/store value of Customer Segment for any Quote.</description>
        <formula>TEXT(SBQQ__Account__r.PMC_SS_CustomerType__c)</formula>
        <label>Customer Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CustomersIndustry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer&apos;s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryEndDate__c</fullName>
        <description>Delivery end date is used in mass update section of quote line editor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryRegion__c</fullName>
        <inlineHelpText>Delivery Region is enabled to be populated only when the Quote is a VCO Quote</inlineHelpText>
        <label>Delivery Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_DeliveryRegion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
        <description>Delivery Start date to use on Mass update on all quote lines.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryYear__c</fullName>
        <description>Field to hold the information of quote delivery year</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Desdobro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desdobro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DestinationComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Destination Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Burma</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Dominican Rep</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Guadeloupe</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Martinique</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Nicaragua</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DischargePort__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discharge Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DiscountMarkup__c</fullName>
        <label>Price Adjustment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Document_ID__c</fullName>
        <description>This field will be used as an identifier for documents generated in DocuSign CLM</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DocumentsRequiredComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Documents Required Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DraftStatusDuration__c</fullName>
        <formula>IF(   ISPICKVAL(SBQQ__Status__c , &quot;Draft&quot;)  &amp;&amp; NOT( ISBLANK(  PMC_CPQ_QuoteInDraftStatusTime__c  ) ) ,   TEXT(ROUND( PMC_CPQ_PriorDraftStatusDuration__c  +((NOW() -  PMC_CPQ_QuoteInDraftStatusTime__c )*24),1))&amp;&apos; Hours&apos;   ,  TEXT( PMC_CPQ_PriorDraftStatusDuration__c  ) &amp;&apos; Hours&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft Status Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
        <description>This field is created to check the estimated freight value. This is as per the  US GCPM 1064</description>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExchangeRate__c</fullName>
        <description>This is the exchange rate.</description>
        <label>Negotiated Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpirationDate__c</fullName>
        <description>This field is to store Expiration date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpirationDuration__c</fullName>
        <description>This field populates the duration this quote will expire and is populated only when the Quote status!=Accpeted or rejected</description>
        <inlineHelpText>When the Quote status is not accepted or rejected this field indicates the duration with in which the quote will be expired</inlineHelpText>
        <label>Expiration Duration</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpirationTime__c</fullName>
        <description>This field is to store Expiration Time</description>
        <label>Expiration Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpiresOn__c</fullName>
        <description>This field captures the Date and Time this quote will be expired</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the Date and Time this Quote will expire</inlineHelpText>
        <label>Expiration Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FPDComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FPD Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FirstQuoteLineShipToState__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Quote Line Ship To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FlowVRByPassToggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow VR ByPass Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FoBLoadingTermsConditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FoB Loading Terms &amp; Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GeneralComments__c</fullName>
        <description>This field to enter the general comments on the quote</description>
        <encryptionScheme>None</encryptionScheme>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GeneralTermsAndConditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Terms and Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_GetPriceCallComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of GDASF-6229. The field is to identify the Get Price callout is completed on the cloned quote and to remove the banner message asking AM / CSR to make the Get Price callout.</description>
        <label>Get Price Call Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_HotQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used on quote to indicate this is priority quote for Account Manager to submit to the customer</description>
        <inlineHelpText>Prioritized Quote for AM to submit to customer</inlineHelpText>
        <label>Hot Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ISBR__c</fullName>
        <formula>If( ISPICKVAL(PMC_CPQ_Region__c, &apos;Brazil&apos;) ,False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS BR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms2__c</fullName>
        <label>Incoterms 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP/Supply chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms__c</fullName>
        <description>The Incoterms for the Product added to the Quote.</description>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_CPQ_QuoteRecordSubType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IndustrialBusinessType__c</fullName>
        <description>This field to extract industrial business type to compare with Product sub family</description>
        <formula>IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;Industrial&quot;,TEXT(PMC_CPQ_QuoteRecordSubType__c),&quot;&quot; )</formula>
        <label>Industrial Business type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IndustrialShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator for Industrial Shipment.</description>
        <label>Industrial Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IntegrationMessage__c</fullName>
        <description>Created as part of GDASF-5842. This field will capture the integration response message</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>receives the Integration response message</inlineHelpText>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IntegrationStatus__c</fullName>
        <description>Created as part of GDASF-5842. This field will capture the overall integration status.</description>
        <inlineHelpText>Indicates the over all integration status</inlineHelpText>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InternationalAnnualContract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Annual Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsCloned__c</fullName>
        <formula>IF(  NOT(ISBLANK(SBQQ__Source__c) ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsContractDateChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will tell if contract start or end date is modified.</description>
        <label>IsContractDateChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsContractPeriodChanged__c</fullName>
        <formula>(PMC_CPQ_ContractStart__c &lt;&gt; PMC_CPQ_LastContractStart__c)  || ( PMC_CPQ_ContractEnd__c  &lt;&gt;  PMC_CPQ_LastContractEnd__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Contract Period Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as a part of story to check if the Quote is considered for Deletion.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsKAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is KAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsSubmissionReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmissionReady</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastActivityDate__c</fullName>
        <description>This field indicates the lastActivity date for Quote</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the date any activity has been done on this Quote.</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastContractEnd__c</fullName>
        <description>This field will hold the last value of Contract Valid To sent to SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contract Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastContractStart__c</fullName>
        <description>This field will hold last value of Contract Valid From sent to SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contract Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastPricedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Priced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastReferencedDate__c</fullName>
        <description>This field is created as a part of story to handle/store value of Last Referenced Date for any Quote by a user.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LastViewedDate__c</fullName>
        <description>This field is created as a part of story to handle/store value of Last Viewed Date for any Quote by a user.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LaycanEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Laycan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LaycanStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Laycan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LaytimeSettlement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Laytime Settlement</label>
        <length>5072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LegacyQuoteID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Original Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LoadportComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Loadport Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Loadport__c</fullName>
        <label>Loadport</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>1-2 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>2 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>2-3 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>3 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>3-4 Berth Tampa, FL range (including Port Manatee)</fullName>
                </value>
                <value>
                    <fullName>1 Berth Galveston, TX</fullName>
                </value>
                <value>
                    <fullName>1 Berth Donaldsonville, LA</fullName>
                </value>
                <value>
                    <fullName>1-2 Berth Tampa, FL range (including Port Manatee) and/or 1 Berth Donaldsonville, LA at Sellers Option</fullName>
                </value>
                <value>
                    <fullName>Carlsbad, New Mexico</fullName>
                </value>
                <value>
                    <fullName>1- Berth Ras Al Khair (RAK), KSA</fullName>
                </value>
                <value>
                    <fullName>1 - Berth Bayovar, Peru</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>CPQ Quotes</relationshipLabel>
        <relationshipName>CPQ_Quotes_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MaintainQuoteOrigin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain Quote Origin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeOfTransportation__c</fullName>
        <label>Mode of Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MosaicSignatoryEmail__c</fullName>
        <description>This field will be used to store the email of the signer from Mosaic.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mosaic Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MosaicSignatoryName__c</fullName>
        <description>This field will be used to store the name of the signer from Mosaic</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mosaic Signatory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MotPrePay__c</fullName>
        <formula>IF( PMC_CPQ_Prepay__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mot&amp;PrePay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetPrice__c</fullName>
        <description>This field is created as a part of story to handle/store value of Net Price for any Quote.</description>
        <label>Net Price</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetPrice__c</summarizedField>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OAP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OAP</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Old_Value_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Value Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OpportunityQuantity__c</fullName>
        <label>Opportunity Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OtherTerms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OutstandingAR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as a part of story to handle/store value of Outstanding AR for any Quote.</description>
        <label>Outstanding AR</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Outstanding AR)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_POC_Paymenterm__c</fullName>
        <formula>if( RIGHT(LEFT(TEXT(SBQQ__PaymentTerms__c),6),1)=&quot; &quot; ,VALUE(RIGHT(LEFT(TEXT(SBQQ__PaymentTerms__c),5),1)),VALUE(MID(TRIM(LEFT( TEXT(SBQQ__PaymentTerms__c),7)), 5, 7)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMC_CPQ_POC_Paymenterm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PO__c</fullName>
        <description>This field captures the unique Purchase order #</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the unique identification code assigned to this purchase order.</inlineHelpText>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackType__c</fullName>
        <description>This field captures the Pack type of the product associated. As per the US GCPM 1064</description>
        <label>Pack Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackageType__c</fullName>
        <description>This field captures the package type for the product associated. This US GCPM 1064</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackagingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Packaging__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Packaging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ParentQuoteTimeStamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Quote Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ParentTransactionId__c</fullName>
        <description>This field will be populated with the value of Parent Quote Number when the Contract is Amended.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Transaction Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTermBackend__c</fullName>
        <description>This field is used in backend to trigger CPQ calculations if payment terms  is changed from quote detail page.</description>
        <formula>Text( SBQQ__PaymentTerms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Backend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTermsApprovalRequired__c</fullName>
        <formula>IF( ISPICKVAL( PMC_CPQ_Region__c, &apos;North America&apos;) , TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c), TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) &amp; &apos;,&apos;)</formula>
        <label>Payment Terms Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTermsRuleIndicator__c</fullName>
        <formula>IF(AND( ISPICKVAL( PMC_CPQ_Region__c , &apos;North America&apos;), Text(SBQQ__PaymentTerms__c) &lt;&gt; TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) , TEXT(SBQQ__Account__r.PMC_CPQ_PaymentTerms__c) &lt;&gt; &apos;Prepayment&apos; ,Text(SBQQ__PaymentTerms__c) &lt;&gt; &apos;Prepayment&apos; ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Rule Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PhysicalForm__c</fullName>
        <description>To hold the information of the physical form</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Form</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PotashBusinessType__c</fullName>
        <description>Product group search filter</description>
        <formula>IF( TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) )=&quot;Potash&quot;,TRIM(RIGHT( TEXT( PMC_CPQ_QuoteRecordSubType__c ),LEN(TEXT( PMC_CPQ_QuoteRecordSubType__c ))-6) ),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Prepay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PresentedStatusDuration__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__Status__c , &quot;Presented&quot;) &amp;&amp; NOT( ISBLANK( PMC_CPQ_QuoteInPresentedStatusTime__c ) ) , TEXT(ROUND(  PMC_CPQ_PriorPresentedStatusDuration__c +((NOW() - PMC_CPQ_QuoteInPresentedStatusTime__c)*24),1))&amp;&apos; Hours&apos; , TEXT( PMC_CPQ_PriorPresentedStatusDuration__c ) &amp;&apos; Hours&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presented Status Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PreviousListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous List Price</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>